--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
 
 <head>
+    <!-- Set character encoding for the document -->
     <meta charset="utf-8">
+    <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- Document Title -->
     <title>Homepage - Techium</title>
+    <!-- Meta Description -->
     <meta name="description" content="Techium is a digital agency">
+    <!-- Standard favicon -->
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <!-- Recommended favicon format -->
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 
@@ -15,4 +21,3 @@
 </body>
 
 </html>
-
