--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>header</header>
+    <header>Header</header>
     <main>Main content</main>
     <footer>Footer</footer>
 </body>
